2008-01-08  Roland McGrath  <roland@redhat.com>

	* Makefile.am (euinclude): Variable removed.
	(pkginclude_HEADERS): Set this instead of euinclude_HEADERS.

2007-12-20  Ulrich Drepper  <drepper@redhat.com>

	* disasm_cb.c: Add initial support to resolve addresses to symbols.

2007-02-05  Ulrich Drepper  <drepper@redhat.com>

	* disasm_begin.c: New file.
	* disasm_cb.c: New file.
	* disasm_end.c: New file.
	* disasm_str.c: New file.

2006-08-29  Roland McGrath  <roland@redhat.com>

	* Makefile.am (CLEANFILES): Add libasm.so.$(VERSION).

2005-11-13  Roland McGrath  <roland@redhat.com>

	* Makefile.am (INCLUDES): Search in libdw.

2005-09-02  Ulrich Drepper  <drepper@redhat.com>

	* asm_error.c (asm_errmsg): Unify error message.

2005-08-28  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am: Use $(LINK) not $(CC) when creating DSO.
	(%.os): Use COMPILE.os.
	(COMPILE.os): Filter out gconv options.

2005-08-02  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am (AM_CFLAGS): Add -std=gnu99.
	* asm_abort.c: Don't try to remove output file if there is none.
	* asm_addint8.c: In print mode, print to file not stdout.
	* asm_addsleb128.c: Likewise.
	* asm_adduleb128.c: Likewise.
	* asm_newscn.c: Likewise.
	* asm_align.c: Implement print mode.
	* asm_begin.c (asm_begin): Change interface.  Take binary class and
	byte order information from new Ebl parameter.
	* libasm.h: Adjust prototype.
	* asm_end.c (text_end): Close file if necesary.
	* asm_error.c: Add new error ASM_E_IOERROR.
	* libasmP.h: Add ASM_E_IOERROR definition.

2005-02-15  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am (AM_CFLAGS): Add -Wunused -Wextra -Wformat=2.

	* asm_end.c (text_end): Mark parameter as possibly unused.

2005-02-06  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am: Remove lint handling.

2005-02-05  Ulrich Drepper  <drepper@redhat.com>

	* asm_end.c (binary_end): Don't terminate with error() in case
	something goes wrong.
